# qml

./: .gitignore  Makefile  README.md  classical.py  pyproject.toml  quantum_plan.md  requirements.txt
datasets/: .gitignore  README.md  download-crypto.py  download-iris.sh  download-yfinance.py
notebooks/: classical_iris.ipynb  iris.ipynb  lab1.ipynb  mean_variance_portfolio.ipynb  mnist_gan.ipynb  qgan.ipynb  quantum_regression.ipynb  stock_gan.ipynb
notebooks/mnist/: mnist_gan.ipynb
notebooks/stock/: black_scholes.ipynb  stock_gan.ipynb  stock_qgan.ipynb  stock_qgan_cloud.ipynb  stock_qgan_results.ipynb  stock_selection.ipynb
notebooks/stock/local_no_pca/: stock_qgan_d_losses.txt  stock_qgan_discriminator  stock_qgan_g_losses.txt  stock_qgan_generator  stock_qgan_y_test_pred.txt  stock_qgan_y_test_true.txt  stock_qgan_y_train_pred.txt  stock_qgan_y_train_true.txt
notebooks/stock/local_pca_4/: stock_qgan_d_losses.txt  stock_qgan_discriminator  stock_qgan_g_losses.txt  stock_qgan_generator  stock_qgan_y_test_pred.txt  stock_qgan_y_test_true.txt  stock_qgan_y_train_pred.txt  stock_qgan_y_train_true.txt
notebooks/stock/local_pca_4_noise/: stock_qgan_d_losses.txt  stock_qgan_discriminator  stock_qgan_g_losses.txt  stock_qgan_generator  stock_qgan_y_test_pred.txt  stock_qgan_y_test_true.txt  stock_qgan_y_train_pred.txt  stock_qgan_y_train_true.txt
qml/dataset/: __init__.py  downloader.py
