[tool.poetry]
name = "qml"
version = "0.1.0"
description = "Exploring quantum machine learning"
authors = ["Marcus Lee <marcustutorial@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
polars = "^0.20.6"
scikit-learn = "^1.4.0"
ipykernel = "^6.29.0"
ccxt = "^4.2.31"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
cvxpy = "^1.4.2"
matplotlib = "^3.8.2"
torch = "^2.2.0"
torchvision = "^0.17.0"
yfinance = "^0.2.37"
notebook = "^7.1.1"
qiskit = "^1.0.2"
pylatexenc = "^2.10"
qiskit-aer = "^0.14.0.1"
qiskit-machine-learning = "^0.7.2"
seaborn = "^0.13.2"
azure-quantum = {extras = ["qiskit"], version = "^2.0.0"}
qiskit-ibm-runtime = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
